syntax = "proto3";
package core;

service Session {
	rpc Create (SessionRequest) returns (SessionResponse);
}

message SessionRequest {
	int32 sessionId = 1;
}

message SessionResponse {
	int32 sessionId = 1;
}

